top-banner added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>wellcome everyone</h1>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>wellcome to</h1>
+            <h1><span class="orange-color">Tahsin Munir's</span> Portfolio</h1>
+
+            <h2>About me</h2>
+            <p>jfbvlkdvbhtbvkew rifvweblrr citewvckr icvksdn xzitchl rugler u hboy jfbvlkdvbhtbvkew rifvweblrr citewvckr
+                icvksdn xzitchl rugler u hbojfbvlkdvbhtbvkew rifvweblrr citewvckr icvksdn xzitchl rugler u
+                hbojfbvlkdvbhtbvkew rifvweblrr citewvckr icvksdn xzitchl rugler u hbojfbvlkdvbhtbvkew rifvweblrr
+                citewvckr
+                icvksdn xzitchl rugler u hbojfbvlkdvbhtbvkew rifvweblrr citewvckr icvksdn xzitchl rugler u
+                hbojfbvlkdvbhtbvkew rifvweblrr citewvckr icvksdn xzitchl rugler u hbojfbvlkdvbhtbvkew rifvweblrr
+                citewvckr
+                icvksdn xzitchl rugler u hbojfbvlkdvbhtbvkew rifvweblrr citewvckr icvksdn xzitchl rugler u
+                hbojfbvlkdvbhtbvkew rifvweblrr citewvckr icvksdn xzitchl rugler u hbov
+            </p>
+            <a class="link-btn" target="_blank" href="">Hire me</a>
+        </div>
+        <Div class="half-width">
+            <img src="images/mypic-withbg.png" alt="">
+        </Div>
+    </section>
+
 </body>
+
 </html>
