--- a/index.html
+++ b/index.html
@@ -13,21 +13,14 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexable-container">
         <div class="half-width">
             <h1>wellcome to</h1>
             <h1><span class="orange-color">Tahsin Munir's</span> Portfolio</h1>
 
             <h2>About me</h2>
-            <p>jfbvlkdvbhtbvkew rifvweblrr citewvckr icvksdn xzitchl rugler u hboy jfbvlkdvbhtbvkew rifvweblrr citewvckr
-                icvksdn xzitchl rugler u hbojfbvlkdvbhtbvkew rifvweblrr citewvckr icvksdn xzitchl rugler u
-                hbojfbvlkdvbhtbvkew rifvweblrr citewvckr icvksdn xzitchl rugler u hbojfbvlkdvbhtbvkew rifvweblrr
-                citewvckr
-                icvksdn xzitchl rugler u hbojfbvlkdvbhtbvkew rifvweblrr citewvckr icvksdn xzitchl rugler u
-                hbojfbvlkdvbhtbvkew rifvweblrr citewvckr icvksdn xzitchl rugler u hbojfbvlkdvbhtbvkew rifvweblrr
-                citewvckr
-                icvksdn xzitchl rugler u hbojfbvlkdvbhtbvkew rifvweblrr citewvckr icvksdn xzitchl rugler u
-                hbojfbvlkdvbhtbvkew rifvweblrr citewvckr icvksdn xzitchl rugler u hbov
+            <p>I am Tahsin Munir from bangladesh. i am a student of programmingHero. i Am learning wed devlopment. i can
+                built simple wed site now. and i can also host them in github.
             </p>
             <a class="link-btn" target="_blank" href="">Hire me</a>
         </div>
@@ -35,6 +28,39 @@
             <img src="images/mypic-withbg.png" alt="">
         </Div>
     </section>
+
+    <section class="dream-dg flexable-container">
+        <Div class="half-width">
+            <img src="images/mypic-withbg.png" alt="">
+        </Div>
+        <div class="half-width">
+            <h1>Dream big</h1>
+            <h2>About me</h2>
+            <p>I am Tahsin munir from bangladesh. I can built simple website now. i am learning web devlopment from
+                programmingHero. Web devlopment is exciting and fun.
+            </p>
+            <a class="link-btn" target="_blank" href="">Hire me</a>
+        </div>
+    </section>
+
+    <section class="Experince-area">
+        <h1>Experinces</h1>
+        <dev class="flexable-container">
+            <dev id="full-stack-exp" class="Experince-item">
+                <h1>Full stack developer</h1>
+                <h3>2021-present | pro lavel developer</h3>
+                <p>i want to become a full stack web developer and built good locking web site</p>
+            </dev>
+            <dev id="web-dev-exp" class="Experince-item">
+                <h1>baby web developer</h1>
+                <h3>2022-2024 | Hero learner</h3>
+                <p>I am just a beginar, so, I am a baby web developer now.</p>
+            </dev>
+        </dev>
+    </section>
+    <footer>
+        <p>copy right | Tahsin Munir 2021</p>
+    </footer>
 
 </body>
 
